--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "lodash": "^4.17.4",
     "postcss": "^6.0.14",
     "vue": "^2.5.7",
-    "vue-axios": "^2.0.2",
     "vue-loader": "^13.5.0",
-    "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.9"
   },
   "name": "laravelvue",
@@ -35,6 +33,8 @@
     "eslint": "^4.13.0",
     "eslint-plugin-vue": "^2.1.0",
     "postcss-unprefix": "^2.1.1",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1",
     "yarn": "^1.3.2"
   },
   "repository": {
