--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_install:
 install:
   - cp .env.example .env
   - travis_retry composer install --no-interaction --prefer-dist --no-suggest
+  - php artisan key:generate
   - npm install
   - npm run production
 
