--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
   "dependencies": {
     "eslint": "^4.13.0",
     "eslint-plugin-vue": "^2.1.0",
+    "npm": "^5.8.0",
     "postcss-unprefix": "^2.1.1",
+    "vue-acl": "^3.0.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "yarn": "^1.3.2"
