--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ storage/*.key
 .env
 Homestead.yaml
 Homestead.json
+vendor
 
 # Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
 .rocketeer/
