--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "imagemin-webpack-plugin": "^2.1.1",
     "npm": "^5.8.0",
     "postcss-unprefix": "^2.1.1",
+    "vee-validate": "^2.0.6",
     "vue-acl": "^3.0.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
