--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postcss-unprefix": "^2.1.1",
     "vee-validate": "^2.0.6",
     "vue-acl": "^3.0.4",
+    "vue-js-modal": "^1.3.13",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "yarn": "^1.3.2"
