--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "axios": "^0.17",
     "bootstrap-sass": "^3.3.7",
-    "cross-env": "^5.1.4",
+    "cross-env": "^5.1.5",
     "eslint-config-airbnb": "^16.1.0",
     "jquery": "^3.3.1",
     "laravel-mix": "^1.0",
@@ -30,6 +30,7 @@
     "test": "tests"
   },
   "dependencies": {
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "eslint": "^4.13.0",
     "eslint-plugin-vue": "^2.1.0",
     "imagemin-webpack-plugin": "^2.1.1",
