--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
         "spatie/laravel-fractal": "^5.3",
-        "tymon/jwt-auth": "0.5.*",
+        "tymon/jwt-auth": "^0.5.12",
         "webpatser/laravel-uuid": "^3.0",
         "zizaco/entrust": "5.2.x-dev"
     },
