Optimize resources to decrease size

--- a/.gitignore
+++ b/.gitignore
@@ -120,8 +120,10 @@ typings/
 !.vscode/extensions.json
 .history
 
-
-# End of https://www.gitignore.io/api/node,macos,laravel,visualstudiocode
+# public genoc
 public/js/
 public/*.js
 public/images/
+
+# End of https://www.gitignore.io/api/node,macos,laravel,visualstudiocode
+
