--- a/.gitignore
+++ b/.gitignore
@@ -124,6 +124,10 @@ typings/
 public/js/
 public/*.js
 public/images/
+public/images/*.png
+public/images/*.jpg
+public/images/*.svg
+public/css/*.css
 
 # End of https://www.gitignore.io/api/node,macos,laravel,visualstudiocode
 
