--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "compression-webpack-plugin": "^1.1.11",
     "eslint": "^4.13.0",
     "eslint-plugin-vue": "^2.1.0",
     "imagemin-webpack-plugin": "^2.1.1",
