--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
     "compression-webpack-plugin": "^1.1.11",
     "eslint": "^4.13.0",
     "eslint-plugin-vue": "^2.1.0",
+    "filepond-plugin-file-validate-type": "^1.1.0",
+    "filepond-plugin-image-preview": "^1.0.9",
     "imagemin-webpack-plugin": "^2.1.5",
     "npm": "^5.10.0",
     "postcss-unprefix": "^2.1.3",
     "vee-validate": "^2.0.9",
     "vue-acl": "^3.0.4",
+    "vue-filepond": "^2.0.1",
     "vue-js-modal": "^1.3.13",
     "vue-router": "^3.0.1",
     "vuedraggable": "^2.16.0",
