drag upload image prototype done

--- a/package.json
+++ b/package.json
@@ -34,8 +34,13 @@
     "compression-webpack-plugin": "^1.1.11",
     "eslint": "^4.13.0",
     "eslint-plugin-vue": "^2.1.0",
+    "filepond-plugin-file-encode": "^1.0.4",
     "filepond-plugin-file-validate-type": "^1.1.0",
+    "filepond-plugin-image-crop": "^1.0.1",
+    "filepond-plugin-image-exif-orientation": "^1.0.1",
     "filepond-plugin-image-preview": "^1.0.9",
+    "filepond-plugin-image-resize": "^1.0.1",
+    "filepond-plugin-image-transform": "^1.0.1",
     "imagemin-webpack-plugin": "^2.1.5",
     "npm": "^5.10.0",
     "postcss-unprefix": "^2.1.3",
