--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "devDependencies": {
     "aes-js": "^3.1.1",
-    "aesjs": "^1.0.0",
     "axios": "^0.17",
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.1.5",
     "eslint-config-airbnb": "^16.1.0",
     "jquery": "^3.3.1",
     "laravel-mix": "^1.0",
+    "lesspass": "^6.0.0",
     "lodash": "^4.17.5",
     "pbkdf2": "^3.0.16",
     "postcss": "^6.0.21",
@@ -35,6 +35,7 @@
   "dependencies": {
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "compression-webpack-plugin": "^1.1.11",
+    "crypto-js": "^3.1.9-1",
     "eslint": "^4.13.0",
     "eslint-plugin-vue": "^2.1.0",
     "filepond-plugin-file-encode": "^1.0.4",
