--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,5 +5,6 @@
     "lang": "en-US",
     "start_url": "/",
     "display": "standalone",
-    "theme_color": "#1e88e5"
+    "theme_color": "#1e88e5",
+    "background_color": "#eee"
   }
