--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/manifest.json": "/manifest.json"
+    "/css/app.css": "/css/app.css"
 }
