--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "imagemin-webpack-plugin": "^2.1.5",
     "npm": "^5.10.0",
     "postcss-unprefix": "^2.1.3",
+    "sw-precache-webpack-plugin": "^0.11.5",
     "vee-validate": "^2.0.9",
     "vue-acl": "^3.0.4",
     "vue-filepond": "^2.0.1",
