--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "postcss": "^6.0.21",
     "vue": "^2.5.16",
     "vue-loader": "^13.7.1",
-    "vue-template-compiler": "^2.5.16"
+    "vue-template-compiler": "^2.5.16",
+    "workbox-webpack-plugin": "^3.3.1"
   },
   "name": "laravelvue",
   "description": "<p align=\"center\"><img src=\"https://laravel.com/assets/img/components/logo-laravel.svg\"></p>",
@@ -45,7 +46,6 @@
     "imagemin-webpack-plugin": "^2.1.5",
     "npm": "^5.10.0",
     "postcss-unprefix": "^2.1.3",
-    "sw-precache-webpack-plugin": "^0.11.5",
     "vee-validate": "^2.0.9",
     "vue-acl": "^3.0.4",
     "vue-filepond": "^2.0.1",
