--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "filepond-plugin-image-resize": "^1.0.1",
     "filepond-plugin-image-transform": "^1.0.1",
     "imagemin-webpack-plugin": "^2.1.5",
+    "install": "^0.12.1",
+    "js-cookie": "^2.2.0",
     "npm": "^5.10.0",
     "postcss-unprefix": "^2.1.3",
     "vee-validate": "^2.0.9",
@@ -53,6 +55,7 @@
     "vue-router": "^3.0.1",
     "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4",
     "yarn": "^1.6.0"
   },
   "repository": {
